--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<img class="img-btn img-border" src="src/img/Button/Power.png" alt="Power"
 					 onclick="updateCardLayout('power')" />
 				<img class="img-btn img-border" src="src/img/Button/Hero.png" alt="Hero"
-					 onclick="updateCardLayout('hero')" style="display:none;" />
+					 onclick="updateCardLayout('hero')" />
 			</div>
 			<div class="multi-form-element">
 				<div class="form-element">
@@ -336,7 +336,7 @@
 						<div class="detail-box-element" id="ability-element" style="min-height: 85.7px;">
 							<div class="ability-icon-container">
 								<img src="src/img/HeroCreator/ActiveAbilityButton.png" class="ability-icon-button" id="ability-icon-button">
-								<img src="src/img/HeroCreator/AdoraAbility1.png" class="ability-icon" id="ability-icon">
+								<img class="ability-icon" id="ability-icon">
 							</div>
 							<img src="src/img/HeroCreator/BloontoniumIcon.png" class="bloontonium-img" id="bloontonium-img">
 							<div class="bloontonium-cost-container">
