--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
 				</div>
 				<div class="form-element">
 					<label for="hero-template-btn" id="hero-template-label">Hero Template</label><br>
-					<button id="hero-template-btn" class="label-btn" onclick="downloadTemplate()">Download</button>
-					<a href="src/img/HeroCreator/HeroPortraitTemplate.png" id="template-download"></a>
+					<button id="hero-template-btn" class="label-btn" onclick="downloadButtonMethod('src/img/HeroCreator/HeroPortraitTemplate.png', 'HeroTemplate.png')">Download</button>
 				</div>
 			</div>
 			<div class="multi-form-element">
