--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 					<img src="src/img/HeroCreator/TopBannerYellow.png" class="hero-name-banner" />
 					<div class="hero-name-container" id="hero-name-container">
 						<span class="bold-text" id="hero-name"></span>
-						<span class="thick-stroke" id="hero-name-stroke" style="top: 26px;"></span>
+						<span class="thick-stroke" id="hero-name-stroke" style="top: 2px;"></span>
 					</div>
 					<div id="ability-holder">
 						<div class="detail-box-element" id="ability-element" style="min-height: 85.7px;">
@@ -338,11 +338,13 @@
 								<img class="ability-icon" id="ability-icon">
 							</div>
 							<img src="src/img/HeroCreator/BloontoniumIcon.png" class="bloontonium-img" id="bloontonium-img">
-							<div class="bloontonium-cost-container">
-								<span class="bold-text-detail" id="bloontonium-cost">0</span>
-								<span class="thick-stroke-detail" id="bloontonium-cost-stroke" style="width: 100%;">0</span>
+							<div style="width: 0px; position: relative;">
+								<div class="bloontonium-cost-container">
+									<span class="bold-text-detail" id="bloontonium-cost">0</span>
+									<span class="thick-stroke-detail" id="bloontonium-cost-stroke" style="width: 100%;">0</span>
+								</div>
 							</div>
-							<div class="detail-title-text-container" id="ability-text-container" style="font-size: 1.225em; max-width: 270px;">
+							<div class="ability-title-text-container" id="ability-text-container" style="font-size: 1.225em; max-width: 270px;">
 								<span class="bold-text-detail" id="ability-name" style="padding-bottom: 0.25em; min-height: 12.5px;"></span>
 								<span class="thick-stroke-detail" id="ability-name-stroke"></span>
 								<span class="no-outline detail-description" id="ability-description" style="min-height: 56px;"></span>
