ability name now shrinks to fit

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 					<img src="src/img/HeroCreator/TopBannerYellow.png" class="hero-name-banner" />
 					<div class="hero-name-container" id="hero-name-container">
 						<span class="bold-text" id="hero-name"></span>
-						<span class="thick-stroke" id="hero-name-stroke" style="top: 2px;"></span>
+						<span class="thick-stroke" id="hero-name-stroke" style="top: 0.0625em;"></span>
 					</div>
 					<div id="ability-holder">
 						<div class="detail-box-element" id="ability-element" style="min-height: 85.7px;">
@@ -348,9 +348,11 @@
 									<span class="thick-stroke-detail" id="bloontonium-cost-stroke" style="width: 100%;">0</span>
 								</div>
 							</div>
-							<div class="ability-title-text-container" id="ability-text-container" style="font-size: 1.225em; max-width: 270px;">
-								<span class="bold-text-detail" id="ability-name" style="padding-bottom: 0.25em; min-height: 12.5px;"></span>
-								<span class="thick-stroke-detail" id="ability-name-stroke"></span>
+							<div class="ability-text-container" id="ability-text-container">
+								<div id="ability-name-container">
+									<span class="bold-text-detail" id="ability-name" style="padding-bottom: 4.9px; min-height: 12.5px;"></span>
+									<span class="thick-stroke-detail" id="ability-name-stroke" style="top: 0.051em;"></span>
+								</div>
 								<span class="no-outline detail-description" id="ability-description" style="min-height: 56px;"></span>
 							</div>
 						</div>
