added Zee Jay icon

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 						<option value="Obyn">Obyn</option>
 						<option value="Amelia">Amelia</option>
 						<option value="Adora">Adora</option>
+						<option value="ZeeJay">Zee Jay</option>
 					</select>
 				</div>
 			</div>
