minor adjustment to cost text container

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 						<span class="bold-text" id="class-text"></span>
 						<span class="thick-stroke" id="class-text-stroke"></span>
 					</div>
-					<div class="cost-text-container">
+					<div id="cost-text-container" class="cost-text-container">
 						<span class="bold-text" id="cost-text"></span>
 						<span class="thicker-stroke" id="cost-text-stroke"></span>
 					</div>
