minor adjustments to card text and aspect ratio

--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
 					<img class="hero-pin" id="hero-pin" src="src/img/HeroPin/None.png">
 					<img class="class-pin" id="class-pin" src="src/img/ClassPin/None.png">
 					<!-- card text -->
-					<div class="title-text-container">
+					<div id="title-text-container" class="title-text-container">
 						<span class="bold-text" id="title-text"></span>
 						<span class="thick-stroke" id="title-text-stroke"></span>
 					</div>
-					<div class="class-text-container">
+					<div id="class-text-container" class="class-text-container">
 						<span class="bold-text" id="class-text"></span>
 						<span class="thick-stroke" id="class-text-stroke"></span>
 					</div>
