added new keywords

--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
 					<select name="keyword-dropdown" id="keyword-dropdown" class="disableable" disabled style="width: 170px;">
 						<option value="Defender">Defender</option>
 						<option value="Stunned">Stunned</option>
-						<option value="OnReplace">On Replace</option>
 						<option value="DoubleAttack">Double Attack</option>
+						<option value="OnAttack">On Attack</option>
+						<option value="OnReload">On Reload</option>
+						<option value="OnReplace">On Replace</option>
 						<option value="OnLeak">On Leak</option>
 						<option value="OnDamaged">On Damaged</option>
 						<option value="OnPopped">On Popped</option>
