drafts now accept plain text

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				</div>
 				<div class="form-element">
 					<label class="label-btn" for="load-draft">Load Draft</label>
-					<input type="file" name="load-draft" id="load-draft" onchange="loadDraft(event)" accept="application/json">
+					<input type="file" name="load-draft" id="load-draft" onchange="loadDraft(event)" accept="application/json,text/plain">
 				</div>
 				<div class="form-element">
 					<button id="download-btn" class="label-btn" onclick="downloadImg()">Download Image</button>
