now inf works in abilities too

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 							<span class="no-outline detail-description" id="keyword-description"></span>
 						</div>
 					</div>
-					<span class="flavor-text-keyword no-outline" id="flavor-text-keyword"></span>
+					<span class="flavor-text no-outline" id="flavor-text"></span>
 				</div>
 			</div>
 		</div>
