added format help

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +11,10 @@
 
 <body>
 	<h1>BCS Custom Cards</h1>
+	<div class="format-help">
+		Formatting Help ⓘ
+		<span class="format-help-tooltip">$/inf: Types an ∞</span>
+	</div>
 	<!-- 2 col constructor-->
 	<div class="two-col">
 		<!-- col 1/2 -->
